<resources>
    <string name="app_name">Calculator</string>
    <string name="calculator">Calculator</string>
    <string name="_9_12_4_4">9+12-4.4</string>
    <string name="delete">delete</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="d">÷</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
</resources>