<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black">

    <TextView
        android:id="@+id/calculator"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="  Calculator"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:background="@color/purple_500"
        />

    <TextView
        android:id="@+id/calculation"
        android:layout_width="350dp"
        android:layout_height="90dp"
        android:layout_marginTop="24dp"
        android:gravity="right"
        android:text="@string/_9_12_4_4"
        android:textColor="@color/white"
        android:textSize="45sp"
        app:layout_constraintHorizontal_bias="0.891"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calculator"
        />

    <Button
        android:id="@+id/btndel"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_margin="2dp"
        android:backgroundTint="#414149"
        android:text="@string/delete"
        app:layout_constraintBottom_toTopOf="@id/btndiv"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calculation"
        />

    <TextView
        android:id="@+id/result"
        android:layout_width="260dp"
        android:layout_height="47dp"
        android:layout_margin="5dp"
        android:background="#3b3a49"
        app:layout_constraintBottom_toTopOf="@id/btn7"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btndel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calculation"
        app:layout_constraintVertical_bias="1.0"
        />

    <Button
        android:id="@+id/btn7"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="1"
        android:textSize="70sp"
        android:text="@string/_7"
        android:textAlignment="center"
        android:backgroundTint="#5B5C6B"
        android:layout_margin="1dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintTop_toBottomOf="@id/btndel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn8"
        app:layout_constraintBottom_toTopOf="@id/btn4"
        />
    <Button
        android:id="@+id/btn8"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="1"
        android:text="@string/_8"
        android:textSize="70sp"
        android:backgroundTint="#5B5C6B"
        android:layout_margin="1dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintTop_toBottomOf="@id/btndel"
        app:layout_constraintLeft_toRightOf="@id/btn7"
        app:layout_constraintRight_toLeftOf="@id/btn9"
        app:layout_constraintBottom_toTopOf="@id/btn5"
        />
    <Button
        android:id="@+id/btn9"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="1"
        android:text="@string/_9"
        android:backgroundTint="#5B5C6B"
        android:textSize="70sp"
        android:layout_margin="1dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintTop_toBottomOf="@id/btndel"
        app:layout_constraintLeft_toRightOf="@id/btn8"
        app:layout_constraintRight_toLeftOf="@id/btndiv"
        app:layout_constraintBottom_toTopOf="@id/btn6"
        />

    <Button
        android:id="@+id/btndiv"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:backgroundTint="#414149"
        android:text="@string/d"
        android:textSize="70sp"
        android:layout_margin="1dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toTopOf="@id/btnmul"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/btn9"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btndel"
        app:layout_constraintVertical_weight="1"
        />

    <Button
        android:id="@+id/btn4"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="1"
        android:text="@string/_4"
        android:backgroundTint="#5B5C6B"
        android:textSize="70sp"
        android:layout_margin="1dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintTop_toBottomOf="@id/btn7"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn5"
        app:layout_constraintBottom_toTopOf="@id/btn1"
        />

    <Button
        android:id="@+id/btn5"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="1"
        android:text="@string/_5"
        android:backgroundTint="#5B5C6B"
        android:textSize="70sp"
        android:layout_margin="1dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintTop_toBottomOf="@id/btn8"
        app:layout_constraintLeft_toRightOf="@id/btn4"
        app:layout_constraintRight_toLeftOf="@id/btn6"
        app:layout_constraintBottom_toTopOf="@id/btn2"
        />

    <Button
        android:id="@+id/btn6"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="1"
        android:text="@string/_6"
        android:backgroundTint="#5B5C6B"
        android:textSize="70sp"
        android:layout_margin="1dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintTop_toBottomOf="@id/btn9"
        app:layout_constraintLeft_toRightOf="@id/btn5"
        app:layout_constraintRight_toLeftOf="@id/btnmul"
        app:layout_constraintBottom_toTopOf="@id/btn3"
        />

    <Button
        android:id="@+id/btnmul"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="1"
        android:layout_margin="2dp"
        android:layout_marginEnd="8dp"
        android:text="×"
        android:textSize="70sp"
        android:backgroundTint="#414149"
        android:layout_margin="1dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toTopOf="@id/btnminus"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btndiv"
        />

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="1"
        android:text="1"
        android:backgroundTint="#5B5C6B"
        android:textSize="70sp"
        android:layout_margin="2dp"
        app:layout_constraintTop_toBottomOf="@id/btn4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn2"
        app:layout_constraintBottom_toTopOf="@id/btnpoint"
        />

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="1"
        android:text="@string/_2"
        android:backgroundTint="#5B5C6B"
        android:textSize="70sp"
        android:layout_margin="1dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintTop_toBottomOf="@id/btn5"
        app:layout_constraintLeft_toRightOf="@id/btn1"
        app:layout_constraintRight_toLeftOf="@id/btn3"
        app:layout_constraintBottom_toTopOf="@id/btn0"
        />

    <Button
        android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="1"
        android:text="@string/_3"
        android:backgroundTint="#5B5C6B"
        android:textSize="70sp"
        android:layout_margin="1dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintTop_toBottomOf="@id/btn6"
        app:layout_constraintLeft_toRightOf="@id/btn2"
        app:layout_constraintRight_toLeftOf="@id/btnminus"
        app:layout_constraintBottom_toTopOf="@id/btneql"
        />

    <Button
        android:id="@+id/btnminus"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="1"
        android:text="-"
        android:backgroundTint="#414149"
        android:textSize="70sp"
        android:layout_margin="1dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintTop_toBottomOf="@id/btnmul"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btplus"
        />

    <Button
        android:id="@+id/btnpoint"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="1"
        android:text="."
        android:backgroundTint="#5B5C6B"
        android:textSize="70sp"
        android:layout_margin="1dp"
        android:layout_margin="1dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintTop_toBottomOf="@id/btn1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn0"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <Button
        android:id="@+id/btn0"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="1"
        android:text="0"
        android:backgroundTint="#5B5C6B"
        android:textSize="70sp"
        android:layout_margin="1dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintTop_toBottomOf="@id/btn2"
        app:layout_constraintLeft_toRightOf="@id/btnpoint"
        app:layout_constraintRight_toLeftOf="@id/btneql"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <Button
        android:id="@+id/btneql"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="1"
        android:text="="
        android:backgroundTint="#414149"
        android:textSize="70sp"
        android:layout_margin="1dp"
        android:layout_margin="1dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintTop_toBottomOf="@id/btn3"
        app:layout_constraintLeft_toRightOf="@id/btn0"
        app:layout_constraintRight_toLeftOf="@id/btplus"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <Button
        android:id="@+id/btplus"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="1dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintVertical_weight="1"
        android:text="+"
        android:backgroundTint="#414149"
        android:textSize="70sp"
        app:layout_constraintTop_toBottomOf="@id/btnminus"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />




</androidx.constraintlayout.widget.ConstraintLayout>